--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,20 +6,17 @@
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
 <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
 <uses-permission android:name="android.permission.READ_PHONE_STATE"></uses-permission>
-
-    <application
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" >
-        <activity
-            android:name=".activity.ListTopics"
-            android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity android:name=".activity.ViewDetail" android:label="@string/app_name"></activity>
+<application android:icon="@drawable/ic_launcher" android:label="@string/app_name">
+ <activity android:name=".activity.ListCategory" android:label="@string/app_name">
+     <intent-filter>
+         <action android:name="android.intent.action.MAIN" />
+         <category android:name="android.intent.category.LAUNCHER" />
+     </intent-filter>     
+ </activity>
+ <activity android:name=".activity.ListTopics" android:label="@string/app_name">     
+ </activity>
+ <activity android:name=".activity.ViewDetail" android:label="@string/app_name"></activity>
+        
     </application>
 
 </manifest>
